[package]
name = "headwhere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
lexical-sort = "0.3.1"
fst = "0.4.7"
memmap = "0.7.0"
highway = "0.8.0"
xorf = { version = "0.8.0", features = [ "serde" ] }
bincode = "1.3.3"
